--- a/Draw/Controller/Home/HomeController~iPad.xib
+++ b/Draw/Controller/Home/HomeController~iPad.xib
@@ -85,6 +85,7 @@
 						<string key="NSFrame">{{694, 942}, {54, 54}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 						<object class="NSCustomResource" key="IBUIImage">
@@ -148,7 +149,7 @@
 						<string key="NSFrame">{{82, 949}, {257, 46}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="941553189"/>
+						<reference key="NSNextKeyView" ref="807972856"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
@@ -181,10 +182,10 @@
 					<object class="IBUIButton" id="802018406">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{234, 386}, {300, 84}}</string>
+						<string key="NSFrame">{{234, 370}, {300, 84}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="76760102"/>
+						<reference key="NSNextKeyView" ref="302918506"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
@@ -206,6 +207,25 @@
 							<double key="NSSize">40</double>
 							<int key="NSfFlags">16</int>
 						</object>
+					</object>
+					<object class="IBUIButton" id="302918506">
+						<reference key="NSNextResponder" ref="191373211"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{234, 466}, {300, 84}}</string>
+						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="76760102"/>
+						<bool key="IBUIOpaque">NO</bool>
+						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+						<int key="IBUIContentHorizontalAlignment">0</int>
+						<int key="IBUIContentVerticalAlignment">0</int>
+						<string key="IBUITitleShadowOffset">{0, 2}</string>
+						<string key="IBUINormalTitle">Friend Play</string>
+						<reference key="IBUIHighlightedTitleColor" ref="634139745"/>
+						<reference key="IBUINormalTitleColor" ref="228971474"/>
+						<reference key="IBUINormalTitleShadowColor" ref="634139745"/>
+						<reference key="IBUIFontDescription" ref="929787462"/>
+						<reference key="IBUIFont" ref="918221547"/>
 					</object>
 					<object class="IBUIButton" id="1021905767">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -279,7 +299,7 @@
 					<object class="IBUIButton" id="76760102">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{234, 509}, {300, 84}}</string>
+						<string key="NSFrame">{{234, 562}, {300, 84}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="727067180"/>
@@ -334,7 +354,7 @@
 					<object class="IBUIButton" id="727067180">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{234, 627}, {300, 84}}</string>
+						<string key="NSFrame">{{234, 658}, {300, 84}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1021905767"/>
@@ -356,6 +376,7 @@
 						<string key="NSFrame">{{357, 941}, {97, 58}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="941553189"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -457,6 +478,14 @@
 					<int key="connectionID">57</int>
 				</object>
 				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">playWithFriendButton</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="302918506"/>
+					</object>
+					<int key="connectionID">67</int>
+				</object>
+				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">clickStart:</string>
 						<reference key="source" ref="802018406"/>
@@ -519,6 +548,15 @@
 					</object>
 					<int key="connectionID">64</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">clickPlayWithFriend:</string>
+						<reference key="source" ref="302918506"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">68</int>
+				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
@@ -546,8 +584,9 @@
 							<reference ref="631078661"/>
 							<reference ref="402059621"/>
 							<reference ref="802018406"/>
-							<reference ref="76760102"/>
 							<reference ref="807972856"/>
+							<reference ref="302918506"/>
+							<reference ref="76760102"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -642,6 +681,11 @@
 						<reference key="object" ref="807972856"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">65</int>
+						<reference key="object" ref="302918506"/>
+						<reference key="parent" ref="191373211"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -668,12 +712,13 @@
 				<real value="0.0" key="49.IBUIButtonInspectorSelectedEdgeInsetMetadataKey"/>
 				<string key="50.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="63.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="65.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">64</int>
+			<int key="maxID">68</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -683,6 +728,7 @@
 					<dictionary class="NSMutableDictionary" key="actions">
 						<string key="clickCheckIn:">id</string>
 						<string key="clickFeedback:">id</string>
+						<string key="clickPlayWithFriend:">id</string>
 						<string key="clickSettings:">id</string>
 						<string key="clickShare:">id</string>
 						<string key="clickShop:">id</string>
@@ -695,6 +741,10 @@
 						</object>
 						<object class="IBActionInfo" key="clickFeedback:">
 							<string key="name">clickFeedback:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="clickPlayWithFriend:">
+							<string key="name">clickPlayWithFriend:</string>
 							<string key="candidateClassName">id</string>
 						</object>
 						<object class="IBActionInfo" key="clickSettings:">
@@ -718,6 +768,7 @@
 						<string key="checkinButton">UIButton</string>
 						<string key="feedbackButton">UIButton</string>
 						<string key="feedbackLabel">UILabel</string>
+						<string key="playWithFriendButton">UIButton</string>
 						<string key="settingButton">UIButton</string>
 						<string key="settingsLabel">UILabel</string>
 						<string key="shareButton">UIButton</string>
@@ -736,6 +787,10 @@
 						<object class="IBToOneOutletInfo" key="feedbackLabel">
 							<string key="name">feedbackLabel</string>
 							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="playWithFriendButton">
+							<string key="name">playWithFriendButton</string>
+							<string key="candidateClassName">UIButton</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="settingButton">
 							<string key="name">settingButton</string>
